@@ -6,4 +6,5 @@ WhoresTube - new site
 Settings - added option to play m3u8 streams with Inputstream Adaptive
 JavGG - new site
 xhamster - fix categories
-Settings - added a button to quickly toggle Kodi Debug log on/off. It's on the bottom in General.
+Settings - added a button to quickly toggle Kodi Debug log on/off, it's on the bottom in General
+Taboofantazy - fixed listing
